--- a/styles/main.css
+++ b/styles/main.css
@@ -4,12 +4,12 @@
 
 @tailwind utilities;
 
-@layer utilities {
+@layer components {
     .bullish {
-        bg-green-500 text-slate-100
-    },
+        @apply bg-green-500 text-slate-100;
+    }
 
     .bearish {
-        bg-red-500 text-slate-100
+        @apply bg-red-500 text-slate-100;
     }
   }
