--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,15 @@
     <head>
         <title>Technical Screener</title>
         <script src="https://cdn.tailwindcss.com"></script>
+        <style>
+            .bullish {
+                background: green; color:white;
+                }
+
+            .bearish {
+                background: red; color:white;
+            }
+        </style>
     </head>
 
     <body class="bg-gray-50">
@@ -16,7 +25,7 @@
                 <input class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" type="submit" value="scan" />
             </form>
 
-            <table>
+            <table class="justify-self-auto	">
                 <tr>
                     <th>
                         Symbol
@@ -38,7 +47,7 @@
                          
                     <tr>
                         <td colspan="3">
-                            <img src="https://finviz.com/chart.ashx?t={{ stock }}&ty=c&ta=1&p=d&s=l" />
+                            <img class="max-w-fit max-h-fit" src="https://finviz.com/chart.ashx?t={{ stock }}&ty=c&ta=1&p=d&s=l" />
                         </td>
                     </tr>
                         
