--- a/templates/index.html
+++ b/templates/index.html
@@ -4,56 +4,64 @@
         <script src="https://cdn.tailwindcss.com"></script>
         <style>
             .bullish {
-                background: green; color:white;
+                background: green; 
+                color:white;
+                border-radius: 0.375rem;
                 }
 
             .bearish {
-                background: red; color:white;
+                background: red; 
+                color:white;
+                border-radius: 0.375rem;
             }
         </style>
     </head>
 
     <body class="bg-gray-50">
-        <h1 class="flex text-3xl font-bold underline text-clifford">Technical Screener</h1>
-        <div class="inline-block relative w-64">
-            <form>
+        <h1 class="flex justify-center text-3xl font-bold p-5"><a href="/">Technical Screener</a></h1>
+        <div class="inline-flex justify-center w-full bg-gray-50 px-4 py-2 font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 focus:ring-offset-gray-100">
+            <form class="inline-flex space-x-2">
                 <select class="block appearance-none w-full bg-white border border-gray-400 hover:border-gray-500 px-4 py-2 pr-8 rounded shadow leading-tight focus:outline-none focus:shadow-outline" placeholder="Select a candlestick pattern" name="pattern">
                     {% for pattern in patterns %}
                         <option value="{{pattern}}" {% if pattern == current_pattern %} selected="selected"{% endif %}>{{patterns[pattern]}}</option>
                     {% endfor %}
                 </select>
-                <input class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" type="submit" value="scan" />
+                <input class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" type="submit" value="Scan" />
             </form>
-
-            <table class="justify-self-auto	">
-                <tr>
-                    <th>
-                        Symbol
-                    </th>
-                    <th>
-                        Company Name
-                    </th>
-                    <th>
-                        Signal Type
-                    </th>
-                </tr>
-                {% for stock in stocks %}
-                    {% if stocks[stock][current_pattern] %}
-                    <tr>
-                        <td class="p-10">{{ stock }}</td>
-                        <td class="p-10">{{ stocks[stock]['company'] }}</td>
-                        <td class="{{ stocks[stock][current_pattern] }} p-10">{{ stocks[stock][current_pattern] }}</td>
-                    </tr>
-                         
-                    <tr>
-                        <td colspan="3">
-                            <img class="max-w-fit max-h-fit" src="https://finviz.com/chart.ashx?t={{ stock }}&ty=c&ta=1&p=d&s=l" />
-                        </td>
-                    </tr>
-                        
-                    {% endif %}
-                {% endfor %}
-            <table>
         </div>
+
+            <hr class="mb-2">
+
+            <div class="flex justify-center items-center space-x-2 py-5">
+                <table class="justify-self-center">
+                    <tr>
+                        <th class="pb-10">
+                            Symbol
+                        </th>
+                        <th class="pb-10">
+                            Company Name
+                        </th>
+                        <th class="pb-10">
+                            Signal Type
+                        </th>
+                    </tr>
+                    {% for stock in stocks %}
+                        {% if stocks[stock][current_pattern] %}
+                        <tr class="px-10 space-x-4 ">
+                            <td class="justify-self-center text-center">{{ stock }}</td>
+                            <td class="font-semibold px-10 justify-self-center text-center">{{ stocks[stock]['company'] }}</td>
+                            <td class="{{ stocks[stock][current_pattern] }} px-4 text-center uppercase">{{ stocks[stock][current_pattern] }}</td>
+                        </tr>
+                            
+                        <tr>
+                            <td class="pt-3 pb-12" colspan="3">
+                                <a href="https://finviz.com/quote.ashx?t={{ stock }}&p=d" target="_blank" rel="noopener noreferrer" title="{{ stock }} chart. Click on the chart to redirect to finviz for more info."><img class="max-w-fit max-h-fit border object-contain rounded-lg" src="https://finviz.com/chart.ashx?t={{ stock }}&ty=c&ta=1&p=d&s=l" /></a>
+                            </td>
+                        </tr>
+                            
+                        {% endif %}
+                    {% endfor %}
+                <table>
+            </div>
     </body>
 </html>
